--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Pratik Aghor"
 description              : &description "Research interests: transition to turbulence in shear flows,
 pattern formation, nonlinear dynamics, geophysical fluid dynamics, scientific computation."
-url                      : https://aghor.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://aghor.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "PratikAghor/aghor.github.io "
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
