--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Pratik Aghor"
 description              : &description "Research interests: transition to turbulence in shear flows,
 pattern formation, nonlinear dynamics, geophysical fluid dynamics, scientific computation."
-url                      : "https://aghor.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://aghor.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "PratikAghor/aghor.github.io "
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -30,7 +30,7 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
+    colorscheme          : "dark"# "light" (default), "dark"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
