--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,9 +5,9 @@ main:
 
   - title: "Publications"
     url: /publications/
-
-  - title: "Research"
-    url: /research/    
+#
+#  - title: "Research"
+#    url: /research/    
 
   - title: "Posts"
     url: /year-archive/
