changed to the correct url

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Pratik Aghor's Academic Website"
 title_separator          : "-"
 name                     : &name "Pratik Aghor"
 description              : &description "PhD Candidate in applied mathematics"
-url                      : "https://aghor.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://pratikaghor.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "PratikAghor/aghor.github.io "
+repository               : "PratikAghor/pratikaghor.github.io "
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
