--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Pratik Aghor"
-  avatar           : "https://avatars.githubusercontent.com/u/32088888?s=96&v=4"
+  avatar           : "https://avatars.githubusercontent.com/u/32088888?s=400&u=3abf8529db860c787fb162aee6342f2fb5873fbe&v=4"
   bio              : "PhD in applied math." # "Your biography for the left-hand sidebar"
   location         : "Durham, NH, USA"
   employer         :
