--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Pratik Aghor"
   avatar           : "https://avatars.githubusercontent.com/u/32088888?s=400&u=3abf8529db860c787fb162aee6342f2fb5873fbe&v=4"
   bio              : "PhD in applied math." # "Your biography for the left-hand sidebar"
-  location         : "Durham, NH, USA"
+  location         : "Atlanta, GA, USA"
   employer         :
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=C9JbZccAAAAJ&hl=en"
