--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /publications/
   
   - title: "Submitted"
-    url: /publications/
+    url: /submitted/
 #
 #  - title: "Research"
 #    url: /research/    
