--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "https://avatars.githubusercontent.com/u/32088888?s=400&u=3abf8529db860c787fb162aee6342f2fb5873fbe&v=4"
   bio              : "PhD in applied math." # "Your biography for the left-hand sidebar"
   location         : "Atlanta, GA, USA"
-  employer         : "Georgia Institute of Technology"   
+  employer         : "Georgia Tech"   
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=C9JbZccAAAAJ&hl=en"
   email            : paghor3@gatech.edu
