--- a/_config.yml
+++ b/_config.yml
@@ -92,11 +92,11 @@ author:
   name             : "Pratik Aghor"
   avatar           : "https://avatars.githubusercontent.com/u/32088888?s=400&u=3abf8529db860c787fb162aee6342f2fb5873fbe&v=4"
   bio              : "PhD in applied math." # "Your biography for the left-hand sidebar"
-  location         : "Atlanta, GA, USA"
-  employer         : "Georgia Tech"   
+  location         : "Baltimore, MD, USA"
+  employer         : "Johns Hopkins University"   
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=C9JbZccAAAAJ&hl=en"
-  email            : paghor3@gatech.edu
+  email            : paghor1@jh.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
