--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   - title: "CV"
     url: /cv/
   
-  - title: "Outreach"
-    url: /outreach/
+#  - title: "Outreach"
+#    url: /outreach/
     
 #  - title: "Guide"
 #    url: /markdown/
